deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golearn-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: golearn
  template:
    metadata:
      labels:
        app: golearn
    spec:
      containers:
        - name: golearn
          image: 450656936157.dkr.ecr.us-east-2.amazonaws.com/golearn:1.1
          ports:
            - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: golearn-service
spec:
  selector:
    app: golearn
  ports:
    - protocol: TCP
      port: 5000 
      targetPort: 5000
