ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: golearn
spec:
  ingressClassName: "nginx"
  rules:
    - host: eezzy.com.ng
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: golearn-service
                port:
                  number: 5000
